--- a/info.yaml
+++ b/info.yaml
@@ -1,17 +1,17 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "tt10_zhouzhouthezhou_adder"      # Project title
+  author:       "Kyle Zhou"      # Your name
+  discord:      "thumpk"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "Adds 2 4bit numbers and displays the output on the 8 segment"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     16k       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_zhouzhouthezhou_adder"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
@@ -22,24 +22,24 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "ui_0"
+  ui[1]: "ui_1"
+  ui[2]: "ui_2"
+  ui[3]: "ui_3"
+  ui[4]: "ui_4"
+  ui[5]: "ui_5"
+  ui[6]: "ui_6"
+  ui[7]: "ui_7"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "uo_1"
+  uo[1]: "uo_2"
+  uo[2]: "uo_3"
+  uo[3]: "uo_4"
+  uo[4]: "uo_5"
+  uo[5]: "uo_6"
+  uo[6]: "uo_7"
+  uo[7]: "uo_8"
 
   # Bidirectional pins
   uio[0]: ""
