--- a/info.yaml
+++ b/info.yaml
@@ -5,7 +5,7 @@ project:
   discord:      "thumpk"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "Adds 2 4bit numbers and displays the output on the 8 segment"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     16k       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     16000       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
